--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 buildscript {
     ext {
         nav_version = "2.5.3"
+        retrofit_version = "2.9.0"
+        hilt_version = "2.44"
     }
 
     repositories {
@@ -18,4 +20,9 @@ plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
