--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         nav_version = "2.5.3"
         retrofit_version = "2.9.0"
         hilt_version = "2.44"
+        serialization_version = "1.5.0"
     }
 
     repositories {
@@ -21,6 +22,8 @@ plugins {
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'org.jetbrains.kotlin.multiplatform' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
