--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,10 @@ buildscript {
     ext {
         nav_version = "2.5.3"
         retrofit_version = "2.9.0"
-        hilt_version = "2.44"
+        hilt_version = "2.44.2"
+        room_version = "2.5.0"
         serialization_version = "1.5.0"
+        kotlin_version = '1.8.0'
     }
 
     repositories {
@@ -14,16 +16,16 @@ buildscript {
 
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
+    id 'com.android.application' version '7.4.1' apply false
+    id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
-    id 'org.jetbrains.kotlin.multiplatform' version '1.7.10' apply false
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10' apply false
 }
 
 task clean(type: Delete) {
