--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        kotlin_version = "1.8.0"
         nav_version = "2.5.3"
-        retrofit_version = "2.9.0"
-        hilt_version = "2.44.2"
         room_version = "2.5.0"
+        hilt_version = "2.44.2"
+        retrofit_version = "2.9.0"
         serialization_version = "1.5.0"
-        kotlin_version = '1.8.0'
+        glide_version = "4.15.0"
     }
 
     repositories {
